--- a/과제/Day4/calculator.html
+++ b/과제/Day4/calculator.html
@@ -24,7 +24,7 @@
         }
         
     </style>
-    <script src="/과제/Day4/calculator.js"></script>
+    <script src="./calculator.js"></script>
 </head>
 <body>
     <table>
