--- a/과제/Day5/login.html
+++ b/과제/Day5/login.html
@@ -11,18 +11,17 @@
     <div class = "allSelect">
         <div class = "loginMenu">
         <h2>로그인</h2>
-        <div class="buttones">
         <input type="text" name="" id="" class="emailBtn inLine" placeholder="EMail을 입력하세요">
         <input type="text" name="" id="" class="passwordBtn inLine" placeholder="비밀번호을 입력하세요">
-        <div></div>
-        <input type="checkbox" name="" class="inLine">Remember me
+        <input type="checkbox" name="" id="">Remember me
         <input type="button" value="로그인" class="inLine btn1">
         <input type="button" value="회원가입" class="inLine btn2">
         </div>
-        
     </div>
     <script>
-        document.querySelector(".btn2").addEventListener('click', ()=>window.open("http://127.0.0.1:5500/%EA%B3%BC%EC%A0%9C/Day5/signIn.html",'_self'));
+        document.querySelector(".btn2").addEventListener('click',function(){
+            window.open("http://127.0.0.1:5500/%EA%B3%BC%EC%A0%9C/Day5/signIn.html",'_self');
+        })
     </script>
 </body>
 </html>
